delphiParser.java
// Generated from C:/Desktop/Working 1/src-2 (2)/src/delphi.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class delphiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		AND=10, ARRAY=11, BEGIN=12, BOOLEAN=13, CASE=14, CHAR=15, CHR=16, CONST=17, 
		DIV=18, DO=19, DOWNTO=20, ELSE=21, END=22, FILE=23, FOR=24, FUNCTION=25, 
		GOTO=26, IF=27, IN=28, INTEGER=29, LABEL=30, MOD=31, NIL=32, NOT=33, OF=34, 
		OR=35, PACKED=36, PROCEDURE=37, PROGRAM=38, REAL=39, RECORD=40, REPEAT=41, 
		SET=42, THEN=43, TO=44, TYPE=45, UNTIL=46, VAR=47, WHILE=48, WITH=49, 
		PLUS=50, MINUS=51, STAR=52, SLASH=53, ASSIGN=54, COMMA=55, SEMI=56, COLON=57, 
		EQUAL=58, NOT_EQUAL=59, LT=60, LE=61, GE=62, GT=63, LPAREN=64, RPAREN=65, 
		LBRACK=66, LBRACK2=67, RBRACK=68, RBRACK2=69, POINTER=70, AT=71, DOT=72, 
		DOTDOT=73, LCURLY=74, RCURLY=75, UNIT=76, INTERFACE=77, USES=78, STRING=79, 
		IMPLEMENTATION=80, TRUE=81, FALSE=82, WS=83, COMMENT_1=84, COMMENT_2=85, 
		IDENT=86, STRING_LITERAL=87, NUM_INT=88, NUM_REAL=89;
	public static final int
		RULE_program = 0, RULE_programHeading = 1, RULE_identifier = 2, RULE_block = 3, 
		RULE_classDefinitionPart = 4, RULE_privateOrPublic = 5, RULE_classVariableDefinition = 6, 
		RULE_classProcedureAndFunctionDeclarationPart = 7, RULE_usesUnitsPart = 8, 
		RULE_labelDeclarationPart = 9, RULE_label = 10, RULE_constantDefinitionPart = 11, 
		RULE_constantDefinition = 12, RULE_constantChr = 13, RULE_constant = 14, 
		RULE_unsignedNumber = 15, RULE_unsignedInteger = 16, RULE_unsignedReal = 17, 
		RULE_sign = 18, RULE_bool_ = 19, RULE_string = 20, RULE_typeDefinitionPart = 21, 
		RULE_typeDefinition = 22, RULE_functionType = 23, RULE_procedureType = 24, 
		RULE_type_ = 25, RULE_simpleType = 26, RULE_scalarType = 27, RULE_subrangeType = 28, 
		RULE_typeIdentifier = 29, RULE_structuredType = 30, RULE_unpackedStructuredType = 31, 
		RULE_stringtype = 32, RULE_arrayType = 33, RULE_typeList = 34, RULE_indexType = 35, 
		RULE_componentType = 36, RULE_recordType = 37, RULE_fieldList = 38, RULE_fixedPart = 39, 
		RULE_recordSection = 40, RULE_variantPart = 41, RULE_tag = 42, RULE_variant = 43, 
		RULE_setType = 44, RULE_baseType = 45, RULE_fileType = 46, RULE_pointerType = 47, 
		RULE_variableDeclarationPart = 48, RULE_variableDeclaration = 49, RULE_procedureAndFunctionDeclarationPart = 50, 
		RULE_procedureOrFunctionDeclaration = 51, RULE_procedureDeclaration = 52, 
		RULE_formalParameterList = 53, RULE_formalParameterSection = 54, RULE_parameterGroup = 55, 
		RULE_identifierList = 56, RULE_constList = 57, RULE_functionDeclaration = 58, 
		RULE_resultType = 59, RULE_statement = 60, RULE_unlabelledStatement = 61, 
		RULE_simpleStatement = 62, RULE_assignmentStatement = 63, RULE_classFuncStatement = 64, 
		RULE_variable = 65, RULE_expression = 66, RULE_relationaloperator = 67, 
		RULE_simpleExpression = 68, RULE_additiveoperator = 69, RULE_term = 70, 
		RULE_multiplicativeoperator = 71, RULE_signedFactor = 72, RULE_factor = 73, 
		RULE_unsignedConstant = 74, RULE_functionDesignator = 75, RULE_parameterList = 76, 
		RULE_set_ = 77, RULE_elementList = 78, RULE_element = 79, RULE_procedureStatement = 80, 
		RULE_actualParameter = 81, RULE_parameterwidth = 82, RULE_gotoStatement = 83, 
		RULE_emptyStatement_ = 84, RULE_empty_ = 85, RULE_structuredStatement = 86, 
		RULE_compoundStatement = 87, RULE_statements = 88, RULE_conditionalStatement = 89, 
		RULE_ifStatement = 90, RULE_caseStatement = 91, RULE_caseListElement = 92, 
		RULE_repetetiveStatement = 93, RULE_whileStatement = 94, RULE_repeatStatement = 95, 
		RULE_forStatement = 96, RULE_forList = 97, RULE_initialValue = 98, RULE_finalValue = 99, 
		RULE_withStatement = 100, RULE_recordVariableList = 101;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programHeading", "identifier", "block", "classDefinitionPart", 
			"privateOrPublic", "classVariableDefinition", "classProcedureAndFunctionDeclarationPart", 
			"usesUnitsPart", "labelDeclarationPart", "label", "constantDefinitionPart", 
			"constantDefinition", "constantChr", "constant", "unsignedNumber", "unsignedInteger", 
			"unsignedReal", "sign", "bool_", "string", "typeDefinitionPart", "typeDefinition", 
			"functionType", "procedureType", "type_", "simpleType", "scalarType", 
			"subrangeType", "typeIdentifier", "structuredType", "unpackedStructuredType", 
			"stringtype", "arrayType", "typeList", "indexType", "componentType", 
			"recordType", "fieldList", "fixedPart", "recordSection", "variantPart", 
			"tag", "variant", "setType", "baseType", "fileType", "pointerType", "variableDeclarationPart", 
			"variableDeclaration", "procedureAndFunctionDeclarationPart", "procedureOrFunctionDeclaration", 
			"procedureDeclaration", "formalParameterList", "formalParameterSection", 
			"parameterGroup", "identifierList", "constList", "functionDeclaration", 
			"resultType", "statement", "unlabelledStatement", "simpleStatement", 
			"assignmentStatement", "classFuncStatement", "variable", "expression", 
			"relationaloperator", "simpleExpression", "additiveoperator", "term", 
			"multiplicativeoperator", "signedFactor", "factor", "unsignedConstant", 
			"functionDesignator", "parameterList", "set_", "elementList", "element", 
			"procedureStatement", "actualParameter", "parameterwidth", "gotoStatement", 
			"emptyStatement_", "empty_", "structuredStatement", "compoundStatement", 
			"statements", "conditionalStatement", "ifStatement", "caseStatement", 
			"caseListElement", "repetetiveStatement", "whileStatement", "repeatStatement", 
			"forStatement", "forList", "initialValue", "finalValue", "withStatement", 
			"recordVariableList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'private'", "'public'", "'protected'", "'constructor'", "'destructor'", 
			"'virtual'", "'override'", "'interface'", "'const'", "'AND'", "'ARRAY'", 
			"'BEGIN'", "'BOOLEAN'", "'CASE'", "'CHAR'", "'CHR'", "'CONST'", "'DIV'", 
			"'DO'", "'DOWNTO'", "'ELSE'", "'END'", "'FILE'", "'FOR'", "'FUNCTION'", 
			"'GOTO'", "'IF'", "'IN'", "'INTEGER'", "'LABEL'", "'MOD'", "'NIL'", "'NOT'", 
			"'OF'", "'OR'", "'PACKED'", "'PROCEDURE'", "'PROGRAM'", "'REAL'", "'RECORD'", 
			"'REPEAT'", "'SET'", "'THEN'", "'TO'", "'TYPE'", "'UNTIL'", "'VAR'", 
			"'WHILE'", "'WITH'", "'+'", "'-'", "'*'", "'/'", "':='", "','", "';'", 
			"':'", "'='", "'<>'", "'<'", "'<='", "'>='", "'>'", "'('", "')'", "'['", 
			"'(.'", "']'", "'.)'", "'^'", "'@'", "'.'", "'..'", "'{'", "'}'", "'UNIT'", 
			"'INTERFACE'", "'USES'", "'STRING'", "'IMPLEMENTATION'", "'TRUE'", "'FALSE'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, "AND", "ARRAY", 
			"BEGIN", "BOOLEAN", "CASE", "CHAR", "CHR", "CONST", "DIV", "DO", "DOWNTO", 
			"ELSE", "END", "FILE", "FOR", "FUNCTION", "GOTO", "IF", "IN", "INTEGER", 
			"LABEL", "MOD", "NIL", "NOT", "OF", "OR", "PACKED", "PROCEDURE", "PROGRAM", 
			"REAL", "RECORD", "REPEAT", "SET", "THEN", "TO", "TYPE", "UNTIL", "VAR", 
			"WHILE", "WITH", "PLUS", "MINUS", "STAR", "SLASH", "ASSIGN", "COMMA", 
			"SEMI", "COLON", "EQUAL", "NOT_EQUAL", "LT", "LE", "GE", "GT", "LPAREN", 
			"RPAREN", "LBRACK", "LBRACK2", "RBRACK", "RBRACK2", "POINTER", "AT", 
			"DOT", "DOTDOT", "LCURLY", "RCURLY", "UNIT", "INTERFACE", "USES", "STRING", 
			"IMPLEMENTATION", "TRUE", "FALSE", "WS", "COMMENT_1", "COMMENT_2", "IDENT", 
			"STRING_LITERAL", "NUM_INT", "NUM_REAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "delphi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public delphiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeadingContext programHeading() {
			return getRuleContext(ProgramHeadingContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(delphiParser.DOT, 0); }
		public TerminalNode EOF() { return getToken(delphiParser.EOF, 0); }
		public TerminalNode INTERFACE() { return getToken(delphiParser.INTERFACE, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(204);
			programHeading();
			setState(206);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INTERFACE) {
				{
				setState(205);
				match(INTERFACE);
				}
			}

			setState(208);
			block();
			setState(209);
			match(DOT);
			setState(210);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramHeadingContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(delphiParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(delphiParser.SEMI, 0); }
		public TerminalNode LPAREN() { return getToken(delphiParser.LPAREN, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(delphiParser.RPAREN, 0); }
		public TerminalNode UNIT() { return getToken(delphiParser.UNIT, 0); }
		public ProgramHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeading; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProgramHeading(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProgramHeading(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitProgramHeading(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramHeadingContext programHeading() throws RecognitionException {
		ProgramHeadingContext _localctx = new ProgramHeadingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeading);
		int _la;
		try {
			setState(226);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PROGRAM:
				enterOuterAlt(_localctx, 1);
				{
				setState(212);
				match(PROGRAM);
				setState(213);
				identifier();
				setState(218);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(214);
					match(LPAREN);
					setState(215);
					identifierList();
					setState(216);
					match(RPAREN);
					}
				}

				setState(220);
				match(SEMI);
				}
				break;
			case UNIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(222);
				match(UNIT);
				setState(223);
				identifier();
				setState(224);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(delphiParser.IDENT, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(228);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
